# downloadManagerV2

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
src/: application.cpp  application.h  downloadController.cpp  downloadController.h  logger.cpp  logger.h  main.cpp  ui.cpp  ui.h  window.cpp  window.h
src/container/: commandQueue.cpp  commandQueue.h
src/core/: application.cpp  application.h  logger.cpp  logger.h  window.cpp  window.h
src/download/: downloadCommand.h  downloadController.cpp  downloadController.h  downloadControllerEvents.h  downloadMetadata.h  downloader.cpp  downloader.h
src/event/: event.h  eventHandler.h  eventManager.cpp  eventManager.h
src/ui/: ui.cpp  ui.h
